# QualidadeAmbiental_AWS_DataLake

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
data/sample/: dados_conformidade_v2_1_0.csv
docs/: runbook.md
docs/adr/: 0001-separate-derived-project.md
docs/iam/: README.md  qa-datalake-ingestion-permissions-policy.template.json  qa-datalake-ingestion-role-trust-policy.template.json  qa-datalake-user-assume-role-policy.template.json
src/qa_datalake/: __init__.py  __main__.py  athena_sql.py  aws_pipeline.py  cli.py  config.py  contract.py  csv_contract.py  manifest.py
tests/: test_athena_sql.py  test_aws_pipeline.py  test_cli.py  test_csv_contract.py  test_manifest.py  test_sample_baseline.py
